Fix responsive bug

--- a/assets/style.css
+++ b/assets/style.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: 'Young Serif';
-    src: url('/assets/fonts/young-serif/YoungSerif-Regular.ttf') format('truetype');
+    src: url('./fonts/young-serif/YoungSerif-Regular.ttf') format('truetype');
     font-weight: 400;
     font-style: normal;
     font-display: swap;
@@ -8,7 +8,7 @@
 
 @font-face {
     font-family: 'Outfit';
-    src: url('/assets/fonts/outfit/static/Outfit-Regular.ttf') format('truetype');
+    src: url('./fonts/outfit/static/Outfit-Regular.ttf') format('truetype');
     font-weight: 400;
     font-style: normal;
     font-display: swap;
@@ -16,7 +16,7 @@
 
 @font-face {
     font-family: 'Outfit';
-    src: url('/assets/fonts/outfit/static/Outfit-SemiBold.ttf') format('truetype');
+    src: url('./fonts/outfit/static/Outfit-SemiBold.ttf') format('truetype');
     font-weight: 600;
     font-style: normal;
     font-display: swap;
@@ -24,7 +24,7 @@
 
 @font-face {
     font-family: 'Outfit';
-    src: url('/assets/fonts/outfit/static/Outfit-Bold.ttf') format('truetype');
+    src: url('./fonts/outfit/static/Outfit-Bold.ttf') format('truetype');
     font-weight: 700;
     font-style: normal;
     font-display: swap;
@@ -66,19 +66,19 @@ body {
 }
 
 header {
-    background: no-repeat center center / cover url(/assets/images/image-omelette.jpeg);
+    background: no-repeat center center / cover url(./images/image-omelette.jpeg);
     width: 100%;
-    max-width: 1300px; /* don't grow past design width */
-    margin: 0 auto; /* center on large screens */
-    padding: 0 30px; /* keep side spacing on small screens */
+    max-width: 1440px;
+    margin: 0 auto;
+    padding: 0 30px;
     box-sizing: border-box;
     height: 200px;
 }
 
 main {
-    margin: 40px auto; /* center content */
-    max-width: 1000px; /* design max width */
-    padding: 0 30px; /* internal side spacing */
+    margin: 40px auto;
+    max-width: 1440px;
+    padding: 0 30px;
     box-sizing: border-box;
 }
 
@@ -178,7 +178,7 @@ strong {
 footer {
     font-size: .6rem;
     text-align: center;
-    max-width: 1000px;
+    max-width: 1440px;
     margin: 40px auto 20px;
     padding: 0 30px;
     box-sizing: border-box;
@@ -187,7 +187,6 @@ footer {
 @media screen and (min-width: 600px) {
     header {
         margin: 40px auto 0;
-        max-width: calc(100% - 60px);
         border-radius: 10px;
         overflow: hidden;
     }
