--- a/assets/style.css
+++ b/assets/style.css
@@ -97,10 +97,6 @@ h2 {
     margin-bottom: 15px;
 }
 
-h3 {
-    color: var(--rose-800);
-}
-
 p {
     margin-bottom: 30px;
 }
@@ -142,6 +138,11 @@ strong {
     border-radius: 10px;
     padding: 20px;
     margin-bottom: 30px;
+}
+
+.preparation h2 {
+    color: var(--rose-800);
+    font-size: 1.17rem;
 }
 
 .preparation ul {
