--- a/assets/style.css
+++ b/assets/style.css
@@ -61,32 +61,34 @@ body {
     padding: 0;
     font-family: 'outfit';
     font-size: 16px;
-    background: var(--white);
     color: var(--stone-600);
 }
 
-header {
+.card {
+    background: var(--white);    
+}
+
+.card__header {
     background: no-repeat center center / cover url(./images/image-omelette.jpeg);
     width: 100%;
-    max-width: 1440px;
-    margin: 0 auto;
-    padding: 0 30px;
-    box-sizing: border-box;
-    height: 200px;
+    height: 150px;
 }
 
-main {
+.card__body {
     margin: 40px auto;
-    max-width: 1440px;
     padding: 0 30px;
-    box-sizing: border-box;
 }
 
-h1 {
+.card__title {
     font-family: 'Young Serif';
-    font-size: 2.1rem;
+    font-size: 1.8rem;
     color: hsl(24, 5%, 18%);
     margin-bottom: 15px;
+    line-height: 1.1;
+}
+
+.card__description {
+    margin-bottom: 30px;
 }
 
 h2 {
@@ -95,10 +97,6 @@ h2 {
     letter-spacing: 2px;
     color: var(--brown-800);
     margin-bottom: 15px;
-}
-
-p {
-    margin-bottom: 30px;
 }
 
 ul, ol {
@@ -132,7 +130,7 @@ strong {
     color: var(--stone-600);
 }
 
-.preparation {
+.card__preparation {
     background: var(--rose-50);
     border: none;
     border-radius: 10px;
@@ -140,45 +138,46 @@ strong {
     margin-bottom: 30px;
 }
 
-.preparation h2 {
+.card__preparation__title {
     color: var(--rose-800);
     font-size: 1.17rem;
 }
 
-.preparation ul {
+.card__preparation ul {
     margin-top: 15px;
 }
 
-.nutrition__table {
+.card__nutrition__table {
     width: 100%;
     border-collapse: collapse;
     font-family: 'Outfit', system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial;
 }
-.nutrition__table td {
+.card__nutrition__table td {
     padding: 12px 0;
     vertical-align: middle;
     border-bottom: 1px solid var(--stone-150);
 }
-.nutrition__table td:first-child {
+.card__nutrition__table td:first-child {
     color: var(--stone-600);
     font-weight: 400;
     padding-left: 50px;
 }
-.nutrition__table td:last-child {
+.card__nutrition__table td:last-child {
     text-align: right;
     padding-right: 2px;
     text-align: start;
 }
-.nutrition__table td strong {
+.card__nutrition__table td strong {
     color: var(--brown-800);
     font-weight: 700;
 }
 
-.nutrition__table tr:last-child td {
+.card__nutrition__table tr:last-child td {
     border-bottom: none;
 }
 
 footer {
+    text-align: center;
     font-size: .6rem;
     text-align: center;
     max-width: 1440px;
@@ -187,10 +186,43 @@ footer {
     box-sizing: border-box;
 }
 
-@media screen and (min-width: 1440px) {
-    header {
-        margin-top: 40px;
+@media screen and (min-width: 500px) {
+    .card__header {
+        height: 200px;
+    }
+}
+
+@media screen and (min-width: 800px) {
+    .card__header {
+        height: 250px;
+    }
+}
+
+@media screen and (min-width: 1000px) {
+    body {
+        background: var(--stone-100);
+    }
+
+    .container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        min-height: 100vh;
+    }
+
+    .card {
+        max-width: 800px;
+        border-radius: 1.5rem;
+        margin-top: 60px;
+        padding: 1.5rem;
+    }
+
+    .card__header {
         border-radius: 10px;
         overflow: hidden;
+    }
+
+    .card__title {        
+        font-size: 2.5rem;
     }
 }
